fix alignments

--- a/style.css
+++ b/style.css
@@ -104,5 +104,11 @@ body {
     height: 100vh;
     margin: 0;
   }
+  .modal .modal-dialog .modal-content {
+    border-radius: 4rem;
+    width: 140%;
+    box-shadow: -1px -2px 42px -19px rgba(0, 0, 0, 0.74);
+}
+
 
 
